# Nodejs-with-Bazel

./: WORKSPACE.bazel  bazel-bazelnode  bazel-bin  bazel-out  bazel-testlogs  package.json
apps/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
apps/node_web/: BUILD.bazel  index.js
